tests/ui/pattern/usefulness/slice-patterns-reachability.stderr
error: unreachable pattern
  --> $DIR/slice-patterns-reachability.rs:8:9
   |
LL |         [true, ..] => {}
   |         ---------- matches all the relevant values
LL |         [true, ..] => {}
   |         ^^^^^^^^^^ no value can reach this
   |
note: the lint level is defined here
  --> $DIR/slice-patterns-reachability.rs:1:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/slice-patterns-reachability.rs:9:9
   |
LL |         [true, ..] => {}
   |         ---------- matches all the relevant values
LL |         [true, ..] => {}
LL |         [true] => {}
   |         ^^^^^^ no value can reach this

error: unreachable pattern
  --> $DIR/slice-patterns-reachability.rs:14:9
   |
LL |         [.., true] => {}
   |         ---------- matches all the relevant values
LL |         [.., true] => {}
   |         ^^^^^^^^^^ no value can reach this

error: unreachable pattern
  --> $DIR/slice-patterns-reachability.rs:15:9
   |
LL |         [.., true] => {}
   |         ---------- matches all the relevant values
LL |         [.., true] => {}
LL |         [true] => {}
   |         ^^^^^^ no value can reach this

error: unreachable pattern
  --> $DIR/slice-patterns-reachability.rs:20:9
   |
LL |         [false, .., true] => {}
   |         ----------------- matches all the relevant values
LL |         [false, .., true] => {}
   |         ^^^^^^^^^^^^^^^^^ no value can reach this

error: unreachable pattern
  --> $DIR/slice-patterns-reachability.rs:21:9
   |
LL |         [false, .., true] => {}
   |         ----------------- matches all the relevant values
LL |         [false, .., true] => {}
LL |         [false, true] => {}
   |         ^^^^^^^^^^^^^ no value can reach this

error: aborting due to 6 previous errors

